--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,30 @@
-header {
-  background-color: blue;
-  border: 10px solid black;
-  font-family: monospace;
-}
 body {
   margin: 0;
   padding: 0;
+}
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(22, 206, 206);
+  border: 10px solid black;
+  font-family: monospace;
+  color: white;
+}
+nav a {
+  text-decoration: none;
+  padding: 15px;
+  color: whitesmoke;
+}
+
+.container {
+  display: flex;
+  background-color: gold;
+  border: 5px solid black;
+}
+div {
+  width: 200px;
+  height: 200px;
+  border: 2px solid black;
+  background-color: rgb(27, 131, 228);
 }
