--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,96 @@
+:root {
+  /* declare a variable with `--` syntax */
+  --dark: #13293d;
+  --light: #fff;
+  --navlink-color: #b9c6ae;
+}
+
+
+
+* {
+  box-sizing: border-box;
+  font-family: "Righteous", cursive;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  text-align: center;
+  font-weight: bolder;
+  font-size: 2.5rem;
 }
+
+/* when we set an element to a display: flex,  we are creating a flex container */
 header {
+  /* color: rgb(49, 41, 41); */
+  width: 100%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: rgb(22, 206, 206);
-  border: 10px solid black;
-  font-family: monospace;
-  color: white;
+  justify-content: space-between;
+  align-items: right;
+  padding: 1rem 2rem;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  position: fixed;
+  z-index: 2;
 }
+
+
 nav a {
   text-decoration: none;
   padding: 15px;
-  color: whitesmoke;
+  color: rgb(71, 60, 60);
+  margin-left: 20px;
+
+}
+nav a:hover {
+
+  transition: all 0.3s ease-in-out;
+  color: var(--secondary-color);
 }
 
-.container {
-  display: flex;
-  background-color: gold;
-  border: 5px solid black;
-}
 div {
   width: 200px;
   height: 200px;
-  border: 2px solid black;
-  background-color: rgb(27, 131, 228);
+  padding: 20px;
+  margin: 20px;
+  color: white;
+  border: 5px solid black;
+  box-shadow: 5px 10px black;
+  border-radius: 10px;
+  background-color: rgb(45, 180, 45);
+}
+
+/* flex-direction - direction of items in the flex container */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  
+  justify-content: center;
+  align-items: center;
+  background-color: lightgrey;
+  border: 10px solid black;
+  height: 600px;
+  /* whileInView: opacity: 1 
+  whileHover={{ scale: 1.3 }}
+  transition={{ duration: 0.5, type: "tween" }}
+} */
+
+
+
+*/ footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(41, 41, 41);
+  color: white;
+  height: 10rem;
 }
